add PatientMapper class and refactor PatientService to use it for DTO conversion